# smb-growth-intelligence

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
bigquery/: README.md
bigquery/dataform/: workflow_settings.yaml
bigquery/dataform/definitions/marts/: mart_campaign_efficiency.sqlx
bigquery/dataform/definitions/staging/: stg_events.sqlx
bigquery/sql/: stg_events.sql
docs/: architecture.md  build.py  data_model.md  index.html  style.css
reports/: data_quality.json  data_quality.md  feature_store.json  metrics.json  model_metrics.json  pipeline_run.json
src/smb/: config.py  generate_data.py  run.py
src/smb/features/: build_features.py  features.yaml  train.py
src/smb/observability/: checks.yaml  run_checks.py
src/smb/pipeline/: run_models.py
src/smb/pipeline/models/marts/: mart_campaign_efficiency.sql  mart_cohort_retention.sql  mart_customer_features.sql  mart_funnel.sql  mart_product_affinity.sql
src/smb/pipeline/models/staging/: stg_ad_spend.sql  stg_crm_customers.sql  stg_events.sql  stg_events_rejected.sql
tests/: test_pipeline.py
