[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smb-growth-intelligence"
version = "0.1.0"
description = "GCP-native SMB growth analytics platform: GA4 -> ETL -> feature store -> propensity model -> data quality (DuckDB prototype, BigQuery-portable)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
